--- a/design/templates/design/login.html
+++ b/design/templates/design/login.html
@@ -12,6 +12,18 @@
         <button type="submit" class="btn btn-primary w-100">Login</button>
     </form>
 
+    {% if form.errors %}
+        <div class="alert alert-danger mt-3">
+            <ul>
+                {% for field, errors in form.errors.items %}
+                    {% for error in errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                {% endfor %}
+            </ul>
+        </div>
+    {% endif %}
+
     <p class="mt-3 text-center">
         Don’t have an account?
         <a href="{% url 'signup' %}">Signup here</a>.
